<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar_reset_senha"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/grad_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_macario"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/senha_nova"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_reset"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/login_usuario"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_texto_tamanho"
                        android:labelFor="@+id/et_reset_senha"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_reset_senha"
                        app:errorTextAppearance="@drawable/et_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <EditText
                            android:id="@+id/et_reset_senha"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/et_bg"
                            android:textColor="@color/white"
                            android:textSize="@dimen/et_text_size"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_reset_senha"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_bg"
                android:text="@string/email_enviar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"/>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>